# mninst-training-app

./: .gitignore  LICENSE  README.md  digit.eps  main.py  main1.py  model.keras  model_trainer.py  model_usage.py  pyproject.toml  requirements.txt
