[project]
name = "conv-learning"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.6.0",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pyqt5>=5.15.11",
    "tensorflow-datasets>=4.9.6",
    "tensorflow>=2.17.0",
    "tf-explain>=0.3.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
