[project]
name = "mninst-learning"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pillow>=11.0.0",
    "pyqt5>=5.15.11",
    "shap>=0.46.0",
    "tensorflow-datasets>=4.9.6",
    "tensorflow>=2.17.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
